fixed problem from previous conflict

--- a/notebooks/test_functions_calem.ipynb
+++ b/notebooks/test_functions_calem.ipynb
@@ -2,43 +2,166 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "34496dbf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 100 entries, 116 to 159\n",
-      "Data columns (total 9 columns):\n",
-      " #   Column             Non-Null Count  Dtype \n",
-      "---  ------             --------------  ----- \n",
-      " 0   Unnamed: 0         100 non-null    int64 \n",
-      " 1   index              100 non-null    int64 \n",
-      " 2   category           100 non-null    object\n",
-      " 3   headline           100 non-null    object\n",
-      " 4   authors            94 non-null     object\n",
-      " 5   link               100 non-null    object\n",
-      " 6   short_description  100 non-null    object\n",
-      " 7   date               100 non-null    object\n",
-      " 8   content            100 non-null    object\n",
-      "dtypes: int64(2), object(7)\n",
-      "memory usage: 7.8+ KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>category</th>\n",
+       "      <th>headline</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>link</th>\n",
+       "      <th>short_description</th>\n",
+       "      <th>date</th>\n",
+       "      <th>content</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>160</td>\n",
+       "      <td>6360</td>\n",
+       "      <td>QUEER VOICES</td>\n",
+       "      <td>‘RuPaul’s Drag Race All Stars 3’ Episode 2 Rec...</td>\n",
+       "      <td>INTO, Editorial Partner</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/rupauls-d...</td>\n",
+       "      <td>Finally someone gets how to take advantage of ...</td>\n",
+       "      <td>2018-02-02</td>\n",
+       "      <td>\\nBy Kevin O’Keeffe\\n\\n\\n\\nAfter eight competi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>146</td>\n",
+       "      <td>9346</td>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Second Director Says Weinsteins Blacklisted Ac...</td>\n",
+       "      <td>Dominique Mosbergen</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/terry-zwi...</td>\n",
+       "      <td>Terry Zwigoff's claim comes on the heels of a ...</td>\n",
+       "      <td>2017-12-17</td>\n",
+       "      <td>\\nA second director has stepped forward this w...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>173</td>\n",
+       "      <td>7773</td>\n",
+       "      <td>WOMEN</td>\n",
+       "      <td>The 20 Funniest Tweets From Women This Week</td>\n",
+       "      <td>Hollis Miller</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/the-20-fu...</td>\n",
+       "      <td>\"I just got an extra 10 minutes of resistance ...</td>\n",
+       "      <td>2018-01-12</td>\n",
+       "      <td>\\n\\nThe ladies of Twitter never fail to bright...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>120</td>\n",
+       "      <td>4620</td>\n",
+       "      <td>POLITICS</td>\n",
+       "      <td>Kentucky Bill To Outlaw Child Marriage Stalled...</td>\n",
+       "      <td>Sebastian Murdock</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/kentucky-...</td>\n",
+       "      <td>The Family Foundation of Kentucky opposes chil...</td>\n",
+       "      <td>2018-03-03</td>\n",
+       "      <td>\\nA bill to stop child marriage in Kentucky wa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>4312</td>\n",
+       "      <td>WOMEN</td>\n",
+       "      <td>40 Stunning Photos Of Women Working Around The...</td>\n",
+       "      <td>Alanna Vagianos and Damon Dahlen</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/40-stunni...</td>\n",
+       "      <td>Because women's work can be anything from a bu...</td>\n",
+       "      <td>2018-03-08</td>\n",
+       "      <td>\\nThis is what “women’s work” looks like. \\nAn...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0  index       category  \\\n",
+       "160         160   6360   QUEER VOICES   \n",
+       "146         146   9346  ENTERTAINMENT   \n",
+       "173         173   7773          WOMEN   \n",
+       "120         120   4620       POLITICS   \n",
+       "12           12   4312          WOMEN   \n",
+       "\n",
+       "                                              headline  \\\n",
+       "160  ‘RuPaul’s Drag Race All Stars 3’ Episode 2 Rec...   \n",
+       "146  Second Director Says Weinsteins Blacklisted Ac...   \n",
+       "173        The 20 Funniest Tweets From Women This Week   \n",
+       "120  Kentucky Bill To Outlaw Child Marriage Stalled...   \n",
+       "12   40 Stunning Photos Of Women Working Around The...   \n",
+       "\n",
+       "                              authors  \\\n",
+       "160           INTO, Editorial Partner   \n",
+       "146               Dominique Mosbergen   \n",
+       "173                     Hollis Miller   \n",
+       "120                 Sebastian Murdock   \n",
+       "12   Alanna Vagianos and Damon Dahlen   \n",
+       "\n",
+       "                                                  link  \\\n",
+       "160  https://www.huffingtonpost.com/entry/rupauls-d...   \n",
+       "146  https://www.huffingtonpost.com/entry/terry-zwi...   \n",
+       "173  https://www.huffingtonpost.com/entry/the-20-fu...   \n",
+       "120  https://www.huffingtonpost.com/entry/kentucky-...   \n",
+       "12   https://www.huffingtonpost.com/entry/40-stunni...   \n",
+       "\n",
+       "                                     short_description        date  \\\n",
+       "160  Finally someone gets how to take advantage of ...  2018-02-02   \n",
+       "146  Terry Zwigoff's claim comes on the heels of a ...  2017-12-17   \n",
+       "173  \"I just got an extra 10 minutes of resistance ...  2018-01-12   \n",
+       "120  The Family Foundation of Kentucky opposes chil...  2018-03-03   \n",
+       "12   Because women's work can be anything from a bu...  2018-03-08   \n",
+       "\n",
+       "                                               content  \n",
+       "160  \\nBy Kevin O’Keeffe\\n\\n\\n\\nAfter eight competi...  \n",
+       "146  \\nA second director has stepped forward this w...  \n",
+       "173  \\n\\nThe ladies of Twitter never fail to bright...  \n",
+       "120  \\nA bill to stop child marriage in Kentucky wa...  \n",
+       "12   \\nThis is what “women’s work” looks like. \\nAn...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from big_picture import get_merged_data\n",
     "import pandas as pd\n",
     "raw_data = get_merged_data.get_data(\"../raw_data/data 12k/\").sample(n=100)\n",
-    "raw_data.info()"
+    "raw_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "ee7de72c",
    "metadata": {},
    "outputs": [
@@ -53,11 +176,226 @@
       "tokenize\n",
       "vocab_richness\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>category</th>\n",
+       "      <th>headline</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>link</th>\n",
+       "      <th>short_description</th>\n",
+       "      <th>date</th>\n",
+       "      <th>content</th>\n",
+       "      <th>news_all_data</th>\n",
+       "      <th>minor_preprocessing</th>\n",
+       "      <th>nrs_count</th>\n",
+       "      <th>questions</th>\n",
+       "      <th>exclamations</th>\n",
+       "      <th>irony</th>\n",
+       "      <th>vocab richness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>160</td>\n",
+       "      <td>160</td>\n",
+       "      <td>6360</td>\n",
+       "      <td>QUEER VOICES</td>\n",
+       "      <td>‘RuPaul’s Drag Race All Stars 3’ Episode 2 Rec...</td>\n",
+       "      <td>INTO, Editorial Partner</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/rupauls-d...</td>\n",
+       "      <td>Finally someone gets how to take advantage of ...</td>\n",
+       "      <td>2018-02-02</td>\n",
+       "      <td>By Kevin O’Keeffe    After eight competitive ...</td>\n",
+       "      <td>B y   K e v i n   O ’ K e e f f e         A ...</td>\n",
+       "      <td>By Kevin O’Keeffe    After eight competitive ...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.008020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>146</td>\n",
+       "      <td>146</td>\n",
+       "      <td>9346</td>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>Second Director Says Weinsteins Blacklisted Ac...</td>\n",
+       "      <td>Dominique Mosbergen</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/terry-zwi...</td>\n",
+       "      <td>Terry Zwigoff's claim comes on the heels of a ...</td>\n",
+       "      <td>2017-12-17</td>\n",
+       "      <td>A second director has stepped forward this we...</td>\n",
+       "      <td>A   s e c o n d   d i r e c t o r   h a s   ...</td>\n",
+       "      <td>A second director has stepped forward this we...</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.023474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>173</td>\n",
+       "      <td>173</td>\n",
+       "      <td>7773</td>\n",
+       "      <td>WOMEN</td>\n",
+       "      <td>The 20 Funniest Tweets From Women This Week</td>\n",
+       "      <td>Hollis Miller</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/the-20-fu...</td>\n",
+       "      <td>\"I just got an extra 10 minutes of resistance ...</td>\n",
+       "      <td>2018-01-12</td>\n",
+       "      <td>The ladies of Twitter never fail to brighten...</td>\n",
+       "      <td>T h e   l a d i e s   o f   T w i t t e r ...</td>\n",
+       "      <td>The ladies of Twitter never fail to brighten...</td>\n",
+       "      <td>141</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.024839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>120</td>\n",
+       "      <td>120</td>\n",
+       "      <td>4620</td>\n",
+       "      <td>POLITICS</td>\n",
+       "      <td>Kentucky Bill To Outlaw Child Marriage Stalled...</td>\n",
+       "      <td>Sebastian Murdock</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/kentucky-...</td>\n",
+       "      <td>The Family Foundation of Kentucky opposes chil...</td>\n",
+       "      <td>2018-03-03</td>\n",
+       "      <td>A bill to stop child marriage in Kentucky was...</td>\n",
+       "      <td>A   b i l l   t o   s t o p   c h i l d   m ...</td>\n",
+       "      <td>A bill to stop child marriage in Kentucky was...</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.023946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4312</td>\n",
+       "      <td>WOMEN</td>\n",
+       "      <td>40 Stunning Photos Of Women Working Around The...</td>\n",
+       "      <td>Alanna Vagianos and Damon Dahlen</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/40-stunni...</td>\n",
+       "      <td>Because women's work can be anything from a bu...</td>\n",
+       "      <td>2018-03-08</td>\n",
+       "      <td>This is what “women’s work” looks like.  And,...</td>\n",
+       "      <td>T h i s   i s   w h a t   “ w o m e n ’ s   ...</td>\n",
+       "      <td>This is what “women’s work” looks like.  And,...</td>\n",
+       "      <td>302</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.010734</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   level_0  Unnamed: 0  index       category  \\\n",
+       "0      160         160   6360   QUEER VOICES   \n",
+       "1      146         146   9346  ENTERTAINMENT   \n",
+       "2      173         173   7773          WOMEN   \n",
+       "3      120         120   4620       POLITICS   \n",
+       "4       12          12   4312          WOMEN   \n",
+       "\n",
+       "                                            headline  \\\n",
+       "0  ‘RuPaul’s Drag Race All Stars 3’ Episode 2 Rec...   \n",
+       "1  Second Director Says Weinsteins Blacklisted Ac...   \n",
+       "2        The 20 Funniest Tweets From Women This Week   \n",
+       "3  Kentucky Bill To Outlaw Child Marriage Stalled...   \n",
+       "4  40 Stunning Photos Of Women Working Around The...   \n",
+       "\n",
+       "                            authors  \\\n",
+       "0           INTO, Editorial Partner   \n",
+       "1               Dominique Mosbergen   \n",
+       "2                     Hollis Miller   \n",
+       "3                 Sebastian Murdock   \n",
+       "4  Alanna Vagianos and Damon Dahlen   \n",
+       "\n",
+       "                                                link  \\\n",
+       "0  https://www.huffingtonpost.com/entry/rupauls-d...   \n",
+       "1  https://www.huffingtonpost.com/entry/terry-zwi...   \n",
+       "2  https://www.huffingtonpost.com/entry/the-20-fu...   \n",
+       "3  https://www.huffingtonpost.com/entry/kentucky-...   \n",
+       "4  https://www.huffingtonpost.com/entry/40-stunni...   \n",
+       "\n",
+       "                                   short_description        date  \\\n",
+       "0  Finally someone gets how to take advantage of ...  2018-02-02   \n",
+       "1  Terry Zwigoff's claim comes on the heels of a ...  2017-12-17   \n",
+       "2  \"I just got an extra 10 minutes of resistance ...  2018-01-12   \n",
+       "3  The Family Foundation of Kentucky opposes chil...  2018-03-03   \n",
+       "4  Because women's work can be anything from a bu...  2018-03-08   \n",
+       "\n",
+       "                                             content  \\\n",
+       "0   By Kevin O’Keeffe    After eight competitive ...   \n",
+       "1   A second director has stepped forward this we...   \n",
+       "2    The ladies of Twitter never fail to brighten...   \n",
+       "3   A bill to stop child marriage in Kentucky was...   \n",
+       "4   This is what “women’s work” looks like.  And,...   \n",
+       "\n",
+       "                                       news_all_data  \\\n",
+       "0    B y   K e v i n   O ’ K e e f f e         A ...   \n",
+       "1    A   s e c o n d   d i r e c t o r   h a s   ...   \n",
+       "2      T h e   l a d i e s   o f   T w i t t e r ...   \n",
+       "3    A   b i l l   t o   s t o p   c h i l d   m ...   \n",
+       "4    T h i s   i s   w h a t   “ w o m e n ’ s   ...   \n",
+       "\n",
+       "                                 minor_preprocessing  nrs_count  questions  \\\n",
+       "0   By Kevin O’Keeffe    After eight competitive ...         20          8   \n",
+       "1   A second director has stepped forward this we...         35          1   \n",
+       "2    The ladies of Twitter never fail to brighten...        141          2   \n",
+       "3   A bill to stop child marriage in Kentucky was...         42          0   \n",
+       "4   This is what “women’s work” looks like.  And,...        302          0   \n",
+       "\n",
+       "   exclamations  irony  vocab richness  \n",
+       "0             2      0        0.008020  \n",
+       "1             2      1        0.023474  \n",
+       "2            20      0        0.024839  \n",
+       "3             2      0        0.023946  \n",
+       "4             1      0        0.010734  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from big_picture.pre_processor import pre_process\n",
-    "data = pre_process(raw_data)"
+    "data = pre_process(raw_data)\n",
+    "data.head()"
    ]
   },
   {
