--- a/notebooks/newsapi_freitas.ipynb
+++ b/notebooks/newsapi_freitas.ipynb
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "a4d5834d",
+   "id": "a68f9ef5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "364f1cc7",
+   "id": "5fcf6093",
    "metadata": {
     "collapsed": true
    },
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "3be8f0f8",
+   "id": "fdf09ee3",
    "metadata": {
     "collapsed": true
    },
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "6e95c1d8",
+   "id": "b5995340",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "0e0fd4dd",
+   "id": "90ba4240",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "5e01ecad",
+   "id": "350f9113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "c279f1e4",
+   "id": "7f08e54b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "56383a03",
+   "id": "39f7c926",
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "59bd6a3a",
+   "id": "10b64b42",
    "metadata": {
     "collapsed": true
    },
@@ -1046,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 373,
-   "id": "face2b49",
+   "id": "0d6306fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "a41302c7",
+   "id": "024a95a5",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "a275782c",
+   "id": "81ef3683",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "9ab1763f",
+   "id": "f6e478c3",
    "metadata": {
     "collapsed": true
    },
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "bf4b136c",
+   "id": "be8cb834",
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "3c027ecf",
+   "id": "289d0c34",
    "metadata": {
     "collapsed": true
    },
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "7023b8e1",
+   "id": "289d7d16",
    "metadata": {
     "collapsed": true
    },
@@ -1372,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "646f53bc",
+   "id": "cb7181d1",
    "metadata": {
     "collapsed": true
    },
@@ -1650,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "1b0fa720",
+   "id": "b70c8bd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "4c3a759a",
+   "id": "624870c5",
    "metadata": {
     "collapsed": true
    },
@@ -1938,7 +1938,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "71d18a92",
+   "id": "34ad59f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1948,7 +1948,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "27b1252b",
+   "id": "be690046",
    "metadata": {
     "collapsed": true
    },
@@ -2051,7 +2051,7 @@
   {
    "cell_type": "code",
    "execution_count": 374,
-   "id": "3f4aa294",
+   "id": "2d5f30aa",
    "metadata": {
     "collapsed": true
    },
@@ -2455,7 +2455,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "f2741249",
+   "id": "3fc2730f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2508,7 +2508,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "390c14bf",
+   "id": "697af7ea",
    "metadata": {
     "collapsed": true
    },
@@ -2611,7 +2611,7 @@
   {
    "cell_type": "code",
    "execution_count": 350,
-   "id": "63a9066b",
+   "id": "9a5ae876",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2631,7 +2631,7 @@
   {
    "cell_type": "code",
    "execution_count": 351,
-   "id": "1b5e8b71",
+   "id": "b19ac525",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2653,7 +2653,7 @@
   {
    "cell_type": "code",
    "execution_count": 352,
-   "id": "bcd25245",
+   "id": "381610f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2673,7 +2673,7 @@
   {
    "cell_type": "code",
    "execution_count": 353,
-   "id": "8165f101",
+   "id": "1332a573",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2695,7 +2695,7 @@
   {
    "cell_type": "code",
    "execution_count": 354,
-   "id": "e5b5ba88",
+   "id": "31296995",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2716,7 +2716,7 @@
   {
    "cell_type": "code",
    "execution_count": 355,
-   "id": "cee89117",
+   "id": "cf76f9f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2758,7 +2758,7 @@
   {
    "cell_type": "code",
    "execution_count": 356,
-   "id": "83bf8fa0",
+   "id": "c12cbe37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2777,7 +2777,7 @@
   {
    "cell_type": "code",
    "execution_count": 357,
-   "id": "8124b776",
+   "id": "79e87080",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2798,7 +2798,7 @@
   {
    "cell_type": "code",
    "execution_count": 358,
-   "id": "6977c37c",
+   "id": "d487ea7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2820,7 +2820,7 @@
   {
    "cell_type": "code",
    "execution_count": 372,
-   "id": "4f6db5a7",
+   "id": "a8b3aa23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2855,7 +2855,7 @@
   {
    "cell_type": "code",
    "execution_count": 360,
-   "id": "d4b43cb3",
+   "id": "cb040ff1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2884,7 +2884,7 @@
   {
    "cell_type": "code",
    "execution_count": 361,
-   "id": "c31144bf",
+   "id": "207e0f0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2945,7 +2945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b498ce4",
+   "id": "7cda66dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2981,7 +2981,7 @@
   {
    "cell_type": "code",
    "execution_count": 371,
-   "id": "25659771",
+   "id": "179bdc06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3063,7 +3063,7 @@
   {
    "cell_type": "code",
    "execution_count": 376,
-   "id": "d576e761",
+   "id": "3b9806cf",
    "metadata": {
     "scrolled": true
    },
@@ -3075,7 +3075,7 @@
   {
    "cell_type": "code",
    "execution_count": 377,
-   "id": "730e0c73",
+   "id": "1938c714",
    "metadata": {
     "collapsed": true
    },
@@ -3344,7 +3344,7 @@
   {
    "cell_type": "code",
    "execution_count": 378,
-   "id": "b81eb90d",
+   "id": "71479369",
    "metadata": {},
    "outputs": [
     {
@@ -3391,207 +3391,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
-   "id": "43b67b53",
+   "execution_count": 385,
+   "id": "ea76383d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>category</th>\n",
-       "      <th>headline</th>\n",
-       "      <th>authors</th>\n",
-       "      <th>link</th>\n",
-       "      <th>short_description</th>\n",
-       "      <th>date</th>\n",
-       "      <th>content</th>\n",
-       "      <th>pre_processed_text</th>\n",
-       "      <th>minor_preprocessing</th>\n",
-       "      <th>label</th>\n",
-       "      <th>nrs_count</th>\n",
-       "      <th>questions</th>\n",
-       "      <th>exclamations</th>\n",
-       "      <th>irony</th>\n",
-       "      <th>vocab_richness</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CRIME</td>\n",
-       "      <td>There Were 2 Mass Shootings In Texas Last Week...</td>\n",
-       "      <td>Melissa Jeltsen</td>\n",
-       "      <td>https://www.huffingtonpost.com/entry/texas-ama...</td>\n",
-       "      <td>She left her husband. He killed their children...</td>\n",
-       "      <td>2018-05-26</td>\n",
-       "      <td>DENTON, Texas ― Amanda Painter sat at the kit...</td>\n",
-       "      <td>[There, Were, Mass, Shootings, In, Texas, Last...</td>\n",
-       "      <td>There Were 2 Mass Shootings In Texas Last Week...</td>\n",
-       "      <td>Crime</td>\n",
-       "      <td>37</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.287574</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ENTERTAINMENT</td>\n",
-       "      <td>Will Smith Joins Diplo And Nicky Jam For The 2...</td>\n",
-       "      <td>Andy McDonald</td>\n",
-       "      <td>https://www.huffingtonpost.com/entry/will-smit...</td>\n",
-       "      <td>Of course it has a song.</td>\n",
-       "      <td>2018-05-26</td>\n",
-       "      <td>The 2018 FIFA World Cup starts June 14 in Rus...</td>\n",
-       "      <td>[Will, Smith, Joins, Diplo, And, Nicky, Jam, F...</td>\n",
-       "      <td>Will Smith Joins Diplo And Nicky Jam For The 2...</td>\n",
-       "      <td>Entertainment</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.641509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ENTERTAINMENT</td>\n",
-       "      <td>Hugh Grant Marries For The First Time At Age 57</td>\n",
-       "      <td>Ron Dicker</td>\n",
-       "      <td>https://www.huffingtonpost.com/entry/hugh-gran...</td>\n",
-       "      <td>The actor and his longtime girlfriend Anna Ebe...</td>\n",
-       "      <td>2018-05-26</td>\n",
-       "      <td>Love actually turned to matrimony for Hugh Gr...</td>\n",
-       "      <td>[Hugh, Grant, Marries, For, The, First, Time, ...</td>\n",
-       "      <td>Hugh Grant Marries For The First Time At Age 5...</td>\n",
-       "      <td>Entertainment</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.608059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ENTERTAINMENT</td>\n",
-       "      <td>Jim Carrey Blasts 'Castrato' Adam Schiff And D...</td>\n",
-       "      <td>Ron Dicker</td>\n",
-       "      <td>https://www.huffingtonpost.com/entry/jim-carre...</td>\n",
-       "      <td>The actor gives Dems an ass-kicking for not fi...</td>\n",
-       "      <td>2018-05-26</td>\n",
-       "      <td>Rep. Adam Schiff (D-Calif.) and fellow Democr...</td>\n",
-       "      <td>[Jim, Carrey, Blasts, Castrato, Adam, Schiff, ...</td>\n",
-       "      <td>Jim Carrey Blasts 'Castrato' Adam Schiff And D...</td>\n",
-       "      <td>Entertainment</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.554455</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ENTERTAINMENT</td>\n",
-       "      <td>Julianna Margulies Uses Donald Trump Poop Bags...</td>\n",
-       "      <td>Ron Dicker</td>\n",
-       "      <td>https://www.huffingtonpost.com/entry/julianna-...</td>\n",
-       "      <td>The \"Dietland\" actress said using the bags is ...</td>\n",
-       "      <td>2018-05-26</td>\n",
-       "      <td>Actress Julianna Margulies unleashed her funn...</td>\n",
-       "      <td>[Julianna, Margulies, Uses, Donald, Trump, Poo...</td>\n",
-       "      <td>Julianna Margulies Uses Donald Trump Poop Bags...</td>\n",
-       "      <td>Entertainment</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.631016</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        category                                           headline  \\\n",
-       "0          CRIME  There Were 2 Mass Shootings In Texas Last Week...   \n",
-       "1  ENTERTAINMENT  Will Smith Joins Diplo And Nicky Jam For The 2...   \n",
-       "2  ENTERTAINMENT    Hugh Grant Marries For The First Time At Age 57   \n",
-       "3  ENTERTAINMENT  Jim Carrey Blasts 'Castrato' Adam Schiff And D...   \n",
-       "4  ENTERTAINMENT  Julianna Margulies Uses Donald Trump Poop Bags...   \n",
-       "\n",
-       "           authors                                               link  \\\n",
-       "0  Melissa Jeltsen  https://www.huffingtonpost.com/entry/texas-ama...   \n",
-       "1    Andy McDonald  https://www.huffingtonpost.com/entry/will-smit...   \n",
-       "2       Ron Dicker  https://www.huffingtonpost.com/entry/hugh-gran...   \n",
-       "3       Ron Dicker  https://www.huffingtonpost.com/entry/jim-carre...   \n",
-       "4       Ron Dicker  https://www.huffingtonpost.com/entry/julianna-...   \n",
-       "\n",
-       "                                   short_description        date  \\\n",
-       "0  She left her husband. He killed their children...  2018-05-26   \n",
-       "1                           Of course it has a song.  2018-05-26   \n",
-       "2  The actor and his longtime girlfriend Anna Ebe...  2018-05-26   \n",
-       "3  The actor gives Dems an ass-kicking for not fi...  2018-05-26   \n",
-       "4  The \"Dietland\" actress said using the bags is ...  2018-05-26   \n",
-       "\n",
-       "                                             content  \\\n",
-       "0   DENTON, Texas ― Amanda Painter sat at the kit...   \n",
-       "1   The 2018 FIFA World Cup starts June 14 in Rus...   \n",
-       "2   Love actually turned to matrimony for Hugh Gr...   \n",
-       "3   Rep. Adam Schiff (D-Calif.) and fellow Democr...   \n",
-       "4   Actress Julianna Margulies unleashed her funn...   \n",
-       "\n",
-       "                                  pre_processed_text  \\\n",
-       "0  [There, Were, Mass, Shootings, In, Texas, Last...   \n",
-       "1  [Will, Smith, Joins, Diplo, And, Nicky, Jam, F...   \n",
-       "2  [Hugh, Grant, Marries, For, The, First, Time, ...   \n",
-       "3  [Jim, Carrey, Blasts, Castrato, Adam, Schiff, ...   \n",
-       "4  [Julianna, Margulies, Uses, Donald, Trump, Poo...   \n",
-       "\n",
-       "                                 minor_preprocessing          label  \\\n",
-       "0  There Were 2 Mass Shootings In Texas Last Week...          Crime   \n",
-       "1  Will Smith Joins Diplo And Nicky Jam For The 2...  Entertainment   \n",
-       "2  Hugh Grant Marries For The First Time At Age 5...  Entertainment   \n",
-       "3  Jim Carrey Blasts 'Castrato' Adam Schiff And D...  Entertainment   \n",
-       "4  Julianna Margulies Uses Donald Trump Poop Bags...  Entertainment   \n",
-       "\n",
-       "   nrs_count  questions  exclamations  irony  vocab_richness  \n",
-       "0         37          4             4      0        0.287574  \n",
-       "1          5          0             1      0        0.641509  \n",
-       "2          7          0             1      0        0.608059  \n",
-       "3          2          0             7      0        0.554455  \n",
-       "4          0          0             3      0        0.631016  "
-      ]
-     },
-     "execution_count": 379,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tryout.head()"
+    "example = tryout.iloc[0:1, :]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "813a91a2",
+   "id": "80b0136c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "777bfc65",
    "metadata": {},
    "outputs": [],
    "source": []
